src/styles/_base.scss
@import "mixins/scrollbars";
@import "theme";
@import "mixins/rhythm";
@import "mixins/breakpoints";

/** 
 * html elements
 */

html {
  font-size: $root-font-size;
  box-sizing: border-box;
}

* {
  &:before,
  &:after {
    box-sizing: inherit;
  }
}

body {
  @include color-assign(background-color, background);
  @include color-assign(color, text_color);
  font-family: $base-font-family-default;
  line-height: $base-line-height;
  min-height: 100%;
  height: 100vh;
  width: 100%;
  overflow: auto;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

::selection {
  background-color: $color-selection;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: inherit;
  font-weight: $bold;
}

h1 {
  font-size: $base-font-size * 2.5;
  @include line-height(2);
  @include margin-top(4);
  @include margin-bottom(1);
}

h2 {
  font-size: $base-font-size * 1.6875;
  @include line-height(1.5);
  @include margin-top(2);
  @include margin-bottom(0.5);
}

h3 {
  font-size: $base-font-size * 1.375;
  @include line-height(1);
  @include margin-top(2);
  @include margin-bottom(0.5);
}

h4 {
  font-size: $base-font-size * 1.2;
  @include line-height(1);
  @include margin-top(1.5);
  @include margin-bottom(0.5);
}

h5 {
  font-size: $base-font-size;
  @include line-height(1);
  @include margin-top(2.5);
  @include margin-bottom(0.5);
}

h6 {
  font-size: $base-font-size;
  @include line-height(1);
  @include margin-top(2.5);
  @include margin-bottom(0.5);
}

img {
  border: 0;
  display: block;
  margin: inherit auto;
}

hr {
  background-color: $color-secondary;
  height: 1px;
  border-width: 0px;
  border-style: initial;
  border-color: initial;
  border-image: initial;
  margin: 1rem;
}

a {
  display: inline-block;
  text-decoration: underline;
  text-decoration-skip-ink: auto;
  color: inherit;
  position: relative;
  cursor: pointer;

  &:hover,
  &:focus {
    color: $color-link-hover;
  }
}

b,
strong {
  font-weight: $bold;
}

ul,
ol {
  @include margin-bottom(1);

  & li {
    padding: 0 5px;
    @include margin-bottom(1);

    p {
      margin-bottom: 0;
    }
  }
}

ul {
  list-style: square;
}

p {
  @include line-height(1);
  @include margin-bottom(0.5);
}

blockquote {
  border-left-color: $color-primary;
  border-left-style: solid;
  border-left-width: 1px;
  margin-left: 0px;
  margin-right: 0px;
  @include padding-left(1.5);
}

figure {
  display: block;
  width: 100%;
  height: auto;
}

figcaption {
  @include line-height(0.75);
  @include margin-top(0.25);
  font-size: $small-font-size;
  font-style: italic;
  margin-bottom: 0;
  text-align: center;
}

.anchor {
  margin-left: -30px !important;
  padding-right: 14px !important;
}

svg {
  width: 100%;
  height: 100%;
  fill: $color-primary;
  vertical-align: middle;
}

// Scrollbars
// ---------------
body {
  @include scrollbars(4px, $color-primary);
}

// Responsive Images
// ---------------
embed,
iframe,
img,
object,
video,
canvas,
svg,
select,
textarea {
  max-width: 100%;
}

// Table layouts
// ---------------
table,
th,
td {
  width: 100%;
  table-layout: fixed;
  padding: 10px;
  border-width: 1px;
  border-style: solid;
  border-collapse: collapse;
  @include color-assign(border-color, text_color);
}

table,
th,
td {
  @include breakpoint-sm {
    font-size: $base-font-size * 0.75;
  }
}

// PrismJS
// ---------------
.gatsby-highlight {
  overflow: auto;
  & pre {
    word-wrap: break-word;
  }
}

.gatsby-highlight pre[class*="language-"].line-numbers {
  overflow: initial;
}

